fixed all the overflows

--- a/style.css
+++ b/style.css
@@ -138,10 +138,21 @@
     padding-bottom: 2%;
     padding-left: 2%;
     gap: 15%;
-    overflow: auto;
 
+    overflow-x: auto;
+    scroll-behavior: smooth;
+
+}
+
+.projects-container {
     display: flex;
     flex-direction: row;
+    gap: 2%;
+    padding-bottom: 1%;
+}
+
+.project-section::-webkit-scrollbar {
+    display: none;
 }
 
 .project-box{
@@ -156,6 +167,7 @@
     font-family: 'Courier New', Courier, monospace;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     overflow: auto;
+    flex-shrink: 0;
 }
 
 #each-project-heading{
@@ -206,9 +218,9 @@
 }
 
 #contact-boxes{
-    color: #E7D3B3;
+    color: #987455;
     text-decoration: none;
-    background-color: #987455;
+    background-color: #E7D3B3;
     width: 40%;
     height: 100%;
     border-radius: 15px;
@@ -229,6 +241,7 @@
 }
 
 @media screen and (max-width: 767px) {
+    /* HEAD SECTION */
     .head{
         flex-direction: column;
         align-items: center;
@@ -251,10 +264,26 @@
         height: auto;
     }
 
+    /* ABOUT ME SECTION */
     .aboutme{
-        margin-right: 3%;
+        margin-right: 0;
+        margin-left: 0;
         text-align: center;
-        margin-left: 4%;
+        border-bottom-left-radius: 0;
+        border-top-left-radius: 0;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+    
+
+    /* SKILLS SECTION */
+    .technicalskills{
+        margin-right: 0;
+        margin-left: 0;
+        text-align: center;
+        border-bottom-right-radius: 0;
+        border-top-right-radius: 0;
+        padding-left: 0%;
     }
 
     .skill{
@@ -275,8 +304,15 @@
         text-align: center;
     }
 
-    .projects{
+
+    /* PPOJECTS SECTION */
+    .project-section{
+        margin-right: 0;
+        margin-left: 0;
         text-align: center;
+        border-bottom-left-radius: 0;
+        border-top-left-radius: 0;
+        padding-left: 0%;
     }
 
     .project{
@@ -284,7 +320,6 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-
     }
 
     #contact-boxes{
